src/elsi.h

void c_elsi_finalize_rw(elsi_rw_handle handle_c);
void c_elsi_set_rw_zero_def(elsi_rw_handle handle_c,
                            double zero_def);
void c_elsi_read_mat_dim(elsi_rw_handle handle_c,
                         char *name_c,
                         double *n_electrons,
                         int *n_basis,
                         int *n_lrow,
                         int *n_lcol);
void c_elsi_read_mat_dim_sparse(elsi_rw_handle handle_c,
                                char *name_c,
                                double *n_electrons,
                                int *n_basis,
                                int *nnz_g,
                                int *nnz_l,
                                int *n_lcol);
void c_elsi_read_mat_real(elsi_rw_handle handle_c,
                          char *name_c,
                          double *mat);
void c_elsi_read_mat_real_sparse(elsi_rw_handle handle_c,
                                 char *name_c,
                                 int *row_ind,
                                 int *col_ptr,
                                 double *mat);
void c_elsi_write_mat_real(elsi_rw_handle handle_c,
                           char *name_c,
                           double *mat);
void c_elsi_write_mat_real_sparse(elsi_rw_handle handle_c,
                                  char *name_c,
                                  int *row_ind,
                                  int *col_ptr,
                                  double *mat);
void c_elsi_read_mat_complex(elsi_rw_handle handle_c,
                             char *name_c,
                             double _Complex *mat);
void c_elsi_read_mat_complex_sparse(elsi_rw_handle handle_c,
                                    char *name_c,
                                    int *row_ind,
                                    int *col_ptr,
                                    double _Complex *mat);
void c_elsi_write_mat_complex(elsi_rw_handle handle_c,
                              char *name_c,
                              double _Complex *mat);
void c_elsi_write_mat_complex_sparse(elsi_rw_handle handle_c,
                                     char *name_c,
                                     int *row_ind,
                                     int *col_ptr,
                                     double _Complex *mat);